# dotfiles

./: .bashrc  .check-bitwarden.ps1  .check-bitwarden.sh  .chezmoi.toml.tmpl  .chezmoiexternal.toml  .chezmoiignore  .gitignore  .gitmodules  AGENTS.md  LICENSE  README.md  THIRD_PARTY.md  _gvimrc  _vimrc.tmpl  dot_gitconfig.tmpl  dot_vimrc  dot_vimrc.tmpl  dot_zprofile  dot_zprofile.tmpl  dot_zshrc  dot_zshrc.tmpl  install.sh  justfile  private_dot_zshrc.secrets.tmpl  run_after_10_claude-json.ps1  run_after_10_claude-json.sh  run_after_20_agent-hooks.ps1  run_after_20_claude-hooks.ps1  run_after_20_claude-hooks.sh
.chezmoidata/: claude.yaml  permissions.yaml
.chezmoiscripts/: run_after_10_claude-json.ps1  run_after_10_claude-json.sh  run_after_20_agent-hooks.ps1  run_after_20_agent-hooks.sh  run_after_30_copy-skills.ps1  run_after_30_copy-skills.sh
.chezmoitemplates/: AGENTS.md  is_powershell  is_windows_posix  is_wsl  vimrc  zed-keymap.json  zed-settings.json
.github/workflows/: ci-agent-hooks.yml  ci-claude-hooks.yml  ci-permissions-gen.yml  release-agent-hooks.yml  release-claude-hooks.yml
agent_hooks/: README.md
agent_hooks/claude/: Cargo.toml
agent_hooks/core/: Cargo.toml
agent_hooks/opencode/: Cargo.toml
claude_hooks/: Cargo.toml  README.md
claude_hooks/src/: main.rs  tests.rs
docs/: permissions.md
dot_claude/: CLAUDE.md  CLAUDE.md.tmpl  executable_statusline.mjs  settings.json.tmpl
dot_claude/hooks/: executable_block-rm.py  (+1 more)
dot_codex/: AGENTS.md  private_config.toml  private_config.toml.tmpl
dot_gemini/: GEMINI.md  GEMINI.md.tmpl
(+21 files in other folders)
