[package]
name = "claude_hooks"
version = "0.2.0"
edition = "2024"
description = "A hook system for Claude Code that provides safety checks and restrictions"
license = "Apache-2.0"
repository = "https://github.com/waki285/dotfiles"

[dependencies]
regex = "1"
seahorse = "2.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "debuginfo"

[lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
single_match_else = "allow"
